# guardian-ai

./: .env  .gitattributes  .gitignore  .replit  README.md  index.html  package-lock.json  package.json  replit.md  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1773178904254-3fd118a5fc64b.mjs  vite.config.ts.timestamp-1773179370723-a27062c47f73b.mjs
attached_assets/: Pasted--0-Preview-universal-music-downloader-1-failed-to-load-_1773269954423.txt  Pasted--Alright-Aiden-white-screen-in-the-preview-pane-with-li_1773240302479.txt  Pasted--Expanding-on-the-Idea-for-a-More-Modern-3D-Visualizer-_1773095567053.txt  Pasted--PROJECT-CONTEXT-This-is-a-project-called-calculator-ma_1773161640692.txt  Pasted-Microsoft-Windows-Version-10-0-26200-8037-c-Microsoft-C_1773452728658.txt  Pasted-See-new-posts-https-github-com-aidenrichtwitter-glitch-_1773159841477.txt  Pasted-Sorry-to-hear-the-app-isn-t-launching-properly-white-sc_1773168573383.txt  Pasted-The-fact-that-none-of-the-code-changes-we-ve-made-inclu_1773102708786.txt  Pasted-The-potential-conflict-between-Ollama-local-toaster-LLM_1773157860715.txt  Pasted-The-preview-errors-indicate-a-classic-Vite-React-setup-_1773283279222.txt  Pasted-To-make-your-visualizer-more-robust-and-user-friendly-w_1773097617301.txt  Pasted-https-github-com-aidenrichtwitter-glitch-guardian-aiThi_1773157321429.txt  Pasted-i-think-the-next-part-is-making-the-app-understand-ever_1773265025017.txt
electron-browser/: .gitignore  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+116 files in other folders)
