[package]
name = "lambda-recursive"
version = "0.1.0"
description = "Self-Referential IDE with native Grok integration"
authors = ["you"]
edition = "2021"

[lib]
name = "lambda_recursive_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
